--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/services/foursquareApi.js"></script>
     <script src="scripts/services/geolocation.js"></script>
+    <script src="scripts/services/utils.js"></script>
     <!-- endbuild -->
   </body>
 </html>
