--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,18 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <meta property="og:image" content="http://shakemeal.thecometcult.com/staticimages/facebook_share.png">
+    <meta property="og:title" content="ShakeMeal - shake it to find a nearby place to eat!">
+    <meta property="og:site_name" content="ShakeMeal"/>
+    <meta property="og:url" content="http://shakemeal.thecometcult.com/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary"> 
+    <meta name="twitter:url" content="http://shakemeal.thecometcult.com/">
+    <meta name="twitter:title" content="ShakeMeal">
+    <meta name="twitter:description" content="Shake to find a nearby place to eat!">
+    <meta name="twitter:image" content="http://shakemeal.thecometcult.com/staticimages/twitter_share.png">
+    <meta name="twitter:creator" content="@TheCometCult">
+
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -29,8 +41,9 @@
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
-    <div class="footer">
+    <div class="footer text-center">
       <p>♥ from The Comet Cult team</p>
+      <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="recommend" data-show-faces="true" data-share="true"></div>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -78,5 +91,14 @@
     <script src="scripts/services/geolocation.js"></script>
     <script src="scripts/services/utils.js"></script>
     <!-- endbuild -->
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1403543656559746";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
   </body>
 </html>
