--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,11 @@
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@Mealshaker">
     <meta name="twitter:url" content="http://mealshaker.com/">
     <meta name="twitter:title" content="Mealshaker">
     <meta name="twitter:description" content="Shake to find a nearby place to eat!">
-    <meta name="twitter:image" content="http://mealshaker.com/staticimages/twitter_share.png">
+    <meta name="twitter:image" content="http://mealshaker.com/staticimages/twitter-sharer-image.png">
     <meta name="twitter:creator" content="@TheCometCult">
 
     <!-- build:css styles/vendor.css -->
