LB-29 Add iOS app info to Twitter Meta-data

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,10 @@
     <meta name="twitter:description" content="Shake to find a nearby place to eat!">
     <meta name="twitter:image" content="http://mealshaker.com/staticimages/twitter-sharer-image.png">
     <meta name="twitter:creator" content="@TheCometCult">
+    <meta name="twitter:app:name:iphone" content="Mealshaker">
+    <meta name="twitter:app:name:ipad" content="Mealshaker">
+    <meta name="twitter:app:id:iphone" content="id821119886">
+    <meta name="twitter:app:id:ipad" content="id821119886">
 
     <!-- build:css styles/vendor.css -->
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css">
