LB-28 Add Smart App Banner to iOS AppStore

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,8 @@
     <meta name="twitter:app:id:iphone" content="id821119886">
     <meta name="twitter:app:id:ipad" content="id821119886">
 
+    <meta name="apple-itunes-app" content="app-id=821119886"/>
+
     <!-- build:css styles/vendor.css -->
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css">
     <link rel="stylesheet" href="bower_components/angular-rn-carousel/dist/angular-carousel.css">
