--- a/app/index.html
+++ b/app/index.html
@@ -1,104 +1,95 @@
 <!doctype html>
 <html ng-app="lunchButtonApp">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-    <!-- tell iOS that this app can work in full screen mode. No need for navbars -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-startup-image" href="./images/launchimage.png">
+        <!-- tell iOS that this app can work in full screen mode. No need for navbars -->
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="apple-touch-startup-image" href="./images/launchimage.png">
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <meta property="og:image" content="http://shakemeal.thecometcult.com/staticimages/facebook_share.png">
-    <meta property="og:title" content="ShakeMeal - shake it to find a nearby place to eat!">
-    <meta property="og:site_name" content="ShakeMeal"/>
-    <meta property="og:url" content="http://shakemeal.thecometcult.com/">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary"> 
-    <meta name="twitter:url" content="http://shakemeal.thecometcult.com/">
-    <meta name="twitter:title" content="ShakeMeal">
-    <meta name="twitter:description" content="Shake to find a nearby place to eat!">
-    <meta name="twitter:image" content="http://shakemeal.thecometcult.com/staticimages/twitter_share.png">
-    <meta name="twitter:creator" content="@TheCometCult">
+        <meta property="og:image" content="http://shakemeal.thecometcult.com/staticimages/facebook_share.png">
+        <meta property="og:title" content="ShakeMeal - shake it to find a nearby place to eat!">
+        <meta property="og:site_name" content="ShakeMeal"/>
+        <meta property="og:url" content="http://shakemeal.thecometcult.com/">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:url" content="http://shakemeal.thecometcult.com/">
+        <meta name="twitter:title" content="ShakeMeal">
+        <meta name="twitter:description" content="Shake to find a nearby place to eat!">
+        <meta name="twitter:image" content="http://shakemeal.thecometcult.com/staticimages/twitter_share.png">
+        <meta name="twitter:creator" content="@TheCometCult">
 
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+        <!-- build:css(.tmp) styles/main.css -->
+        <link rel="stylesheet" href="styles/main.css">
+        <!-- endbuild -->
+    </head>
+    <body>
 
-    <!--[if lt IE 9]>
-      <script src="bower_components/es5-shim/es5-shim.js"></script>
-      <script src="bower_components/json3/lib/json3.min.js"></script>
-    <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
-    <div class="footer text-center">
-      <p>♥ from The Comet Cult team</p>
-      <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="recommend" data-show-faces="true" data-share="true"></div>
-    </div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
 
-    <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+        <div class="container">
 
-    <!-- build:js scripts/plugins.js -->
-    <script src="bower_components/sass-bootstrap/js/affix.js"></script>
-    <script src="bower_components/sass-bootstrap/js/alert.js"></script>
-    <script src="bower_components/sass-bootstrap/js/button.js"></script>
-    <script src="bower_components/sass-bootstrap/js/carousel.js"></script>
-    <script src="bower_components/sass-bootstrap/js/transition.js"></script>
-    <script src="bower_components/sass-bootstrap/js/collapse.js"></script>
-    <script src="bower_components/sass-bootstrap/js/dropdown.js"></script>
-    <script src="bower_components/sass-bootstrap/js/modal.js"></script>
-    <script src="bower_components/sass-bootstrap/js/scrollspy.js"></script>
-    <script src="bower_components/sass-bootstrap/js/tab.js"></script>
-    <script src="bower_components/sass-bootstrap/js/tooltip.js"></script>
-    <script src="bower_components/sass-bootstrap/js/popover.js"></script>
-    <!-- endbuild -->
-    <!-- build:js scripts/modules.js -->
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/swiftclick/js/dist/swiftclick.min.js"></script>
-    <script src="bower_components/shake.js/shake.js"></script>
-    <!-- endbuild -->
 
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/constants.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/services/foursquareApi.js"></script>
-    <script src="scripts/services/geolocation.js"></script>
-    <script src="scripts/services/utils.js"></script>
-    <!-- endbuild -->
+            <div class="jumbotron" ng-controller="MainCtrl">
+                <div ng-show="venue">
+                    <a ng-href="{{venue.canonicalUrl}}" target="_blank">
+                        <h1>{{venue.name}}</h1>
+                        <h2>Just {{venue.location.distance}} from you!</h2>
+                        <h4>{{venue.location.address}}, {{venue.location.city}}</h4>
+                    </a>
+                    {{tip.text}}
+                </div>
+                <button class="btn btn-7 btn-7h" ng-class="{'btn-error': loading}" ng-click="getRandomLunchVenue()">Go!</button>
+            </div><!-- end:MainCtrl -->
 
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1403543656559746";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-  </body>
+
+        </div>
+        <div class="footer text-center">
+            <p>♥ from The Comet Cult team</p>
+            <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="recommend" data-show-faces="true" data-share="true"></div>
+        </div>
+
+
+
+
+
+
+
+        <script src="bower_components/angular/angular.js"></script>
+
+        <!-- build:js scripts/plugins.js -->
+        <!-- endbuild -->
+        <!-- build:js scripts/modules.js -->
+        <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="bower_components/swiftclick/js/dist/swiftclick.min.js"></script>
+        <script src="bower_components/shake.js/shake.js"></script>
+        <!-- endbuild -->
+
+        <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/app.js"></script>
+        <script src="scripts/constants.js"></script>
+        <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/services/foursquareApi.js"></script>
+        <script src="scripts/services/geolocation.js"></script>
+        <script src="scripts/services/utils.js"></script>
+        <script src="scripts/filters/formatDistance.js"></script>
+        <!-- endbuild -->
+
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1403543656559746";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+    </body>
 </html>
