--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
                 <div ng-show="venue">
                     <a ng-href="{{venue.canonicalUrl}}" target="_blank">
                         <h1>{{venue.name}}</h1>
-                        <h2>Just {{venue.location.distance}} from you!</h2>
+                        <h2>Just {{venue.location.distance | formatDistance}} from you!</h2>
                         <h4>{{venue.location.address}}, {{venue.location.city}}</h4>
                     </a>
                     {{tip.text}}
