LB-38 Removed desktop text and added TCC link

--- a/app/index.html
+++ b/app/index.html
@@ -63,21 +63,20 @@
     <div class="app-ad">
         <img src="images/logo.png" alt="Mealshaker's logo">
         <h1 class="visuallyhidden">Mealshaker</h1>
-        <p>Shake your phone to find a place to eat or drink. Brutally simple and fun. Try it now - just open this page on your phone or download our iPhone app.</p>
-        <a class="download-app" href="https://itunes.apple.com/us/app/mealshaker/id821119886">Download App</a>
     </div>
     <div class="phone-container">
         <main role="main" ng-view ng-class="ngViewClasses" anim-class></main>
     </div>
 
     <footer class="mobile-hide app-footer">
+        <a class="download-app" href="https://itunes.apple.com/us/app/mealshaker/id821119886">Download App</a>
         <ul>
             <li><button facebook-share class="facebook">facebook</button></li>
             <li><button twitter-share class="twitter">twitter</button></li>
         </ul>
         <p>
             <a href="mailto:contact@mealshaker.com">contact@mealshaker.com</a><br>
-            &copy; 2014 The Comet Cult All Rights Reserved
+            &copy; 2014 <a href="http://thecometcult.com/">The Comet Cult</a> All Rights Reserved
         </p>
     </footer>
 
