LB-43 Added AdMob for iOS

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-class="{cordova: isCordova}">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -104,6 +104,7 @@
     <script src="scripts/services/utils.js"></script>
     <script src="scripts/directives/social.dir.js"></script>
     <script src="scripts/directives/resize.dir.js"></script>
+    <script src="scripts/directives/mealshakerAd.dir.js"></script>
     <!-- endbuild -->
 
     <script>
