LB-40 Added first attempt on dragging screens

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
         </p>
     </footer>
 
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
 
     <!-- build:js scripts/plugins.js -->
@@ -105,6 +106,7 @@
     <script src="scripts/directives/social.dir.js"></script>
     <script src="scripts/directives/resize.dir.js"></script>
     <script src="scripts/directives/mealshakerAd.dir.js"></script>
+    <script src="scripts/directives/mealshakerDraggable.dir.js"></script>
     <!-- endbuild -->
 
     <script>
