--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/ngStorage/src/angularLocalStorage.js"></script>
     <script src="bower_components/ta-angularjs-slider/dist/rzslider.min.js"></script>
     <script src="bower_components/swiftclick/js/dist/swiftclick.min.js"></script>
     <script src="bower_components/shake.js/shake.js"></script>
